[autogen] make goa + [controllers/redditharvest] split update method into separate endpoints
