# app/controllers.go
@@ -615,14 +615,18 @@ func unmarshalVerifyRedditPayload(ctx context.Context, service *goa.Service, req
 // RedditharvestController is the controller interface for the Redditharvest actions.
 type RedditharvestController interface {
 	goa.Muxer
-	Update(*UpdateRedditharvestContext) error
+	UpdateAbout(*UpdateAboutRedditharvestContext) error
+	UpdateSubmittedInfo(*UpdateSubmittedInfoRedditharvestContext) error
+	UpdateTrophies(*UpdateTrophiesRedditharvestContext) error
 }
 
 // MountRedditharvestController "mounts" a Redditharvest resource controller on the given service.
 func MountRedditharvestController(service *goa.Service, ctrl RedditharvestController) {
 	initService(service)
 	var h goa.Handler
-	service.Mux.Handle("OPTIONS", "/v1/social/reddit/harvest", ctrl.MuxHandler("preflight", handleRedditharvestOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/v1/social/reddit/harvest/about", ctrl.MuxHandler("preflight", handleRedditharvestOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/v1/social/reddit/harvest/submitted", ctrl.MuxHandler("preflight", handleRedditharvestOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/v1/social/reddit/harvest/trophies", ctrl.MuxHandler("preflight", handleRedditharvestOrigin(cors.HandlePreflight()), nil))
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -630,7 +634,7 @@ func MountRedditharvestController(service *goa.Service, ctrl RedditharvestContro
 			return err
 		}
 		// Build the context
-		rctx, err := NewUpdateRedditharvestContext(ctx, req, service)
+		rctx, err := NewUpdateAboutRedditharvestContext(ctx, req, service)
 		if err != nil {
 			return err
 		}
@@ -640,12 +644,58 @@ func MountRedditharvestController(service *goa.Service, ctrl RedditharvestContro
 		} else {
 			return goa.MissingPayloadError()
 		}
-		return ctrl.Update(rctx)
+		return ctrl.UpdateAbout(rctx)
 	}
 	h = handleSecurity("JWTAuth", h)
 	h = handleRedditharvestOrigin(h)
-	service.Mux.Handle("POST", "/v1/social/reddit/harvest", ctrl.MuxHandler("update", h, unmarshalUpdateRedditharvestPayload))
-	service.LogInfo("mount", "ctrl", "Redditharvest", "action", "Update", "route", "POST /v1/social/reddit/harvest", "security", "JWTAuth")
+	service.Mux.Handle("POST", "/v1/social/reddit/harvest/about", ctrl.MuxHandler("updateAbout", h, unmarshalUpdateAboutRedditharvestPayload))
+	service.LogInfo("mount", "ctrl", "Redditharvest", "action", "UpdateAbout", "route", "POST /v1/social/reddit/harvest/about", "security", "JWTAuth")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewUpdateSubmittedInfoRedditharvestContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		// Build the payload
+		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
+			rctx.Payload = rawPayload.(*UpdateRedditUserPayload)
+		} else {
+			return goa.MissingPayloadError()
+		}
+		return ctrl.UpdateSubmittedInfo(rctx)
+	}
+	h = handleSecurity("JWTAuth", h)
+	h = handleRedditharvestOrigin(h)
+	service.Mux.Handle("POST", "/v1/social/reddit/harvest/submitted", ctrl.MuxHandler("updateSubmittedInfo", h, unmarshalUpdateSubmittedInfoRedditharvestPayload))
+	service.LogInfo("mount", "ctrl", "Redditharvest", "action", "UpdateSubmittedInfo", "route", "POST /v1/social/reddit/harvest/submitted", "security", "JWTAuth")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewUpdateTrophiesRedditharvestContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		// Build the payload
+		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
+			rctx.Payload = rawPayload.(*UpdateRedditUserPayload)
+		} else {
+			return goa.MissingPayloadError()
+		}
+		return ctrl.UpdateTrophies(rctx)
+	}
+	h = handleSecurity("JWTAuth", h)
+	h = handleRedditharvestOrigin(h)
+	service.Mux.Handle("POST", "/v1/social/reddit/harvest/trophies", ctrl.MuxHandler("updateTrophies", h, unmarshalUpdateTrophiesRedditharvestPayload))
+	service.LogInfo("mount", "ctrl", "Redditharvest", "action", "UpdateTrophies", "route", "POST /v1/social/reddit/harvest/trophies", "security", "JWTAuth")
 }
 
 // handleRedditharvestOrigin applies the CORS response headers corresponding to the origin.
@@ -672,8 +722,38 @@ func handleRedditharvestOrigin(h goa.Handler) goa.Handler {
 	}
 }
 
-// unmarshalUpdateRedditharvestPayload unmarshals the request body into the context request data Payload field.
-func unmarshalUpdateRedditharvestPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+// unmarshalUpdateAboutRedditharvestPayload unmarshals the request body into the context request data Payload field.
+func unmarshalUpdateAboutRedditharvestPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+	payload := &updateRedditUserPayload{}
+	if err := service.DecodeRequest(req, payload); err != nil {
+		return err
+	}
+	if err := payload.Validate(); err != nil {
+		// Initialize payload with private data structure so it can be logged
+		goa.ContextRequest(ctx).Payload = payload
+		return err
+	}
+	goa.ContextRequest(ctx).Payload = payload.Publicize()
+	return nil
+}
+
+// unmarshalUpdateSubmittedInfoRedditharvestPayload unmarshals the request body into the context request data Payload field.
+func unmarshalUpdateSubmittedInfoRedditharvestPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+	payload := &updateRedditUserPayload{}
+	if err := service.DecodeRequest(req, payload); err != nil {
+		return err
+	}
+	if err := payload.Validate(); err != nil {
+		// Initialize payload with private data structure so it can be logged
+		goa.ContextRequest(ctx).Payload = payload
+		return err
+	}
+	goa.ContextRequest(ctx).Payload = payload.Publicize()
+	return nil
+}
+
+// unmarshalUpdateTrophiesRedditharvestPayload unmarshals the request body into the context request data Payload field.
+func unmarshalUpdateTrophiesRedditharvestPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
 	payload := &updateRedditUserPayload{}
 	if err := service.DecodeRequest(req, payload); err != nil {
 		return err
