# controllers/redditharvest.go
@@ -23,9 +23,9 @@ func NewRedditharvestController(service *goa.Service, dbs *db.DB) *Redditharvest
 	}
 }
 
-// Update runs the update action.
-func (c *RedditharvestController) Update(ctx *app.UpdateRedditharvestContext) error {
-	// RedditharvestController_Update: start_implement
+// UpdateAbout runs the updateAbout action.
+func (c *RedditharvestController) UpdateAbout(ctx *app.UpdateAboutRedditharvestContext) error {
+	// RedditharvestController_UpdateAbout: start_implement
 
 	// Put your logic here
 
@@ -58,34 +58,12 @@ func (c *RedditharvestController) Update(ctx *app.UpdateRedditharvestContext) er
 		})
 	}
 
-	log.Println("[controllers/reddit] retrieving Reddit Trophy info")
-	// get list of trophies user has been awarded
-	if err := authSession.GetRedditUserTrophies(user); err != nil {
-		log.Errorf("[controller/reddit] %v", err)
-		return ctx.NotFound(&app.StandardError{
-			Code:    400,
-			Message: "could not retrieve Reddit Trophy info",
-		})
-	}
-
-	log.Println("[controllers/reddit] retrieving Reddit Submitted info")
-	// get slice of subreddits user is subscribed to based on activity
-	if err := authSession.GetSubmittedInfo(user); err != nil {
-		log.Errorf("[controller/reddit] %v", err)
-		return ctx.NotFound(&app.StandardError{
-			Code:    400,
-			Message: "could not retrieve Reddit Submitted info",
-		})
-	}
-
 	user = &types.User{
 		CognitoAuthUserID: ctx.Payload.UserID,
 		Social: &types.Social{
 			Reddit: &types.Reddit{
 				LinkKarma:    user.Social.Reddit.LinkKarma,
 				CommentKarma: user.Social.Reddit.CommentKarma,
-				Trophies:     user.Social.Reddit.Trophies,
-				Subreddits:   user.Social.Reddit.Subreddits,
 				Verification: &types.Verification{
 					PostedVerificationCode:    "",
 					ConfirmedVerificationCode: "",
@@ -104,13 +82,149 @@ func (c *RedditharvestController) Update(ctx *app.UpdateRedditharvestContext) er
 		})
 	}
 
+	log.Printf("[controllers/reddit] successfully harvested Reddit About info for user: %s", user.UserID)
+
 	res := &app.Reddituser{
 		Username:     ctx.Payload.Username,
 		LinkKarma:    user.Social.Reddit.LinkKarma,
 		CommentKarma: user.Social.Reddit.CommentKarma,
-		Trophies:     user.Social.Reddit.Trophies,
-		Subreddits:   user.Social.Reddit.Subreddits,
 	}
 	return ctx.OK(res)
-	// RedditharvestController_Update: end_implement
+	// RedditharvestController_UpdateAbout: end_implement
+}
+
+// UpdateTrophies runs the updateTrophies action.
+func (c *RedditharvestController) UpdateTrophies(ctx *app.UpdateTrophiesRedditharvestContext) error {
+	// RedditharvestController_Update: start_implement
+
+	// Put your logic here
+
+	user := &types.User{
+		Social: &types.Social{
+			Reddit: &types.Reddit{
+				Username:     ctx.Payload.Username,
+				Verification: &types.Verification{},
+			},
+		},
+	}
+
+	// initializes reddit OAuth sessions
+	authSession, err := reddit.NewRedditAuth()
+	if err != nil {
+		log.Errorf("[controller/reddit] error: %v", err)
+		return ctx.InternalServerError(&app.StandardError{
+			Code:    500,
+			Message: "could not start reddit auth session",
+		})
+	}
+
+	log.Println("[controllers/reddit] retrieving Reddit Trophy info")
+	// get list of trophies user has been awarded
+	if err := authSession.GetRedditUserTrophies(user); err != nil {
+		log.Errorf("[controller/reddit] %v", err)
+		return ctx.NotFound(&app.StandardError{
+			Code:    400,
+			Message: "could not retrieve Reddit Trophy info",
+		})
+	}
+
+	user = &types.User{
+		UserID: ctx.Payload.UserID,
+		Social: &types.Social{
+			Reddit: &types.Reddit{
+				Trophies: user.Social.Reddit.Trophies,
+				Verification: &types.Verification{
+					PostedVerificationCode:    "",
+					ConfirmedVerificationCode: "",
+					Verified:                  false,
+				},
+			},
+		},
+	}
+
+	_, err = c.db.UpdateRedditInfo(user)
+	if err != nil {
+		log.Errorf("[controller/reddit] %v", err)
+		return ctx.NotFound(&app.StandardError{
+			Code:    400,
+			Message: "could not update Reddit user listing in db",
+		})
+	}
+
+	log.Printf("[controllers/reddit] successfully harvested Reddit Trophy info for user: %s", user.UserID)
+
+	res := &app.Reddituser{
+		Username: ctx.Payload.Username,
+		Trophies: user.Social.Reddit.Trophies,
+	}
+	return ctx.OK(res)
+	// RedditharvestController_UpdateTrophies: end_implement
+}
+
+// UpdateSubmittedInfo runs the updateSubmittedInfo action.
+func (c *RedditharvestController) UpdateSubmittedInfo(ctx *app.UpdateSubmittedInfoRedditharvestContext) error {
+	// RedditharvestController_UpdateSubmittedInfo: start_implement
+
+	// Put your logic here
+
+	user := &types.User{
+		Social: &types.Social{
+			Reddit: &types.Reddit{
+				Username:     ctx.Payload.Username,
+				Verification: &types.Verification{},
+			},
+		},
+	}
+
+	// initializes reddit OAuth sessions
+	authSession, err := reddit.NewRedditAuth()
+	if err != nil {
+		log.Errorf("[controller/reddit] error: %v", err)
+		return ctx.InternalServerError(&app.StandardError{
+			Code:    500,
+			Message: "could not start reddit auth session",
+		})
+	}
+
+	log.Println("[controllers/reddit] retrieving Reddit Submitted info")
+	// get slice of subreddits user is subscribed to based on activity
+	if err := authSession.GetSubmittedInfo(user); err != nil {
+		log.Errorf("[controller/reddit] %v", err)
+		return ctx.NotFound(&app.StandardError{
+			Code:    400,
+			Message: "could not retrieve Reddit Submitted info",
+		})
+	}
+
+	user = &types.User{
+		CognitoAuthUserID: ctx.Payload.UserID,
+		Social: &types.Social{
+			Reddit: &types.Reddit{
+				Subreddits: user.Social.Reddit.Subreddits,
+				Verification: &types.Verification{
+					PostedVerificationCode:    "",
+					ConfirmedVerificationCode: "",
+					Verified:                  false,
+				},
+			},
+		},
+	}
+
+	_, err = c.db.UpdateRedditInfo(user)
+	if err != nil {
+		log.Errorf("[controller/reddit] %v", err)
+		return ctx.NotFound(&app.StandardError{
+			Code:    400,
+			Message: "could not update Reddit user listing in db",
+		})
+	}
+
+	log.Printf("[controllers/reddit] successfully harvested Reddit Submitted info for user: %s", user.UserID)
+
+	res := &app.Reddituser{
+		Username:   ctx.Payload.Username,
+		Subreddits: user.Social.Reddit.Subreddits,
+	}
+	return ctx.OK(res)
+	// RedditharvestController_UpdateSubmittedInfo: end_implement
 }
